prevent overlap of main content with footer

--- a/style/base/base.scss
+++ b/style/base/base.scss
@@ -5,20 +5,9 @@ html, body {
 
 body {
     overflow-y: scroll;
-}
-
-#wrapper {
-    min-height: 100%;
-    min-width: 100%;
-    padding-bottom: 100px;
-    position: relative;
-
     & > footer {
-        bottom: 0;
-        position: absolute;
+        margin: 100px 0 20px 0;
         text-align: center;
-        width: 100%;
-
         & > a {
             display: inline-block;
             padding: 10px;
@@ -26,8 +15,12 @@ body {
     }
 }
 
+#main {
+    min-height: 75%;
+}
+
 #homepage {
-    #wrapper > .navbar-liberapay {
+    > .navbar-liberapay {
         background-color: transparent;
         color: $gray-light;
         .dropdown-menu {
